Test2/Demo/mdapipkg/unpackaged/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>YEAR( TODAY() ) - YEAR(Birthday__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JoinDate__c</fullName>
        <label>JoinDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mail__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Mail</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Member_of_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member of Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Member of Project</relationshipLabel>
        <relationshipName>Member_of_Project</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Branch Manager</fullName>
                </value>
                <value>
                    <fullName>Project manager</fullName>
                </value>
                <value>
                    <fullName>Programmer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seniority__c</fullName>
        <formula>YEAR(TODAY())-YEAR(JoinDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seniority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <label>isActive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EMP{00000}</displayFormat>
        <label>Employee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>